--- a/host-app/package.json
+++ b/host-app/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5000 --strictPort",
+    "serve": "bun run build && bun run preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
